--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
+    "start": "webpack --config webpack/base.js ",
     "server": "webpack-dev-server --config webpack/base.js",
     "game": "webpack-dev-server --config webpack/base.js --open"
   },
